--- a/index.html
+++ b/index.html
@@ -13,7 +13,6 @@
 		<h2>Publishing graphics – test run</h2>
 	</div>
 
-	<!-- Replace this text with the embed code for your visualization. In the "Publish visualization" section of Datawrapper, click the radio button that says "Responsive iframe" and then copy/paste everything in the box above it. -->
-
+	<iframe title="[ % Adults smoking by State ]" aria-label="Map" id="datawrapper-chart-aLH3i" src="https://datawrapper.dwcdn.net/aLH3i/1/" scrolling="no" frameborder="0" style="width: 0; min-width: 100% !important; border: none;" height="483" data-external="1"></iframe><script type="text/javascript">!function(){"use strict";window.addEventListener("message",(function(a){if(void 0!==a.data["datawrapper-height"]){var e=document.querySelectorAll("iframe");for(var t in a.data["datawrapper-height"])for(var r=0;r<e.length;r++)if(e[r].contentWindow===a.source){var i=a.data["datawrapper-height"][t]+"px";e[r].style.height=i}}}))}();
 </body>
 </html>
